<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group >
        <item
            android:id="@+id/nav_computer"
            android:icon="@mipmap/icon_computer"
            android:title="@string/str_computer_transfer" />
        <item
            android:id="@+id/nav_web_transfer"
            android:icon="@mipmap/icon_web"
            android:title="@string/str_web_transfer" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_mail_24dp"
            android:title="@string/str_feedback" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_sync_24dp"
            android:title="@string/str_update_version" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_person_outline_24dp"
            android:title="@string/str_about_me" />
    </group>

</menu>
