<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">
    <include
        android:id="@+id/topbar"
        layout="@layout/layout_top_bar" />

    <TextView
        android:id="@+id/tv_top_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/style_common_text"
        android:layout_below="@id/topbar"
        android:text="@string/tip_waiting_file_sender_connect"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tv_top_tip">
        <io.github.mayubao.kuaichuan.ui.view.RadarLayout
            android:id="@+id/radarLayout"
            android:layout_height="match_parent"
            android:layout_width="match_parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/iv_device"
            android:layout_width="@dimen/dp_96"
            android:layout_height="@dimen/dp_96"
            android:src="@mipmap/icon_radish"
            app:civ_border_width="2dp"
            app:civ_border_color="#FFFFFFFF"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_common_text"
            android:padding="10dp"
            android:text="@string/str_device_name"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_below="@id/iv_device" />
        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/style_common_text"
            android:text="@string/str_desc"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_below="@id/tv_device_name" />

    </RelativeLayout>

</RelativeLayout>
