<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_send"
        android:layout_alignParentRight="true"/>
    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/btn_send" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <ImageView
            android:id="@+id/iv_shortcut"
            android:layout_width="48dp"
            android:layout_height="48dp" />
        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0%"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_alignParentRight="true"/>

        <ProgressBar
            android:id="@+id/pb"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/tv_progress"/>
        
        <Button
            android:id="@+id/btn_suspend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_suspend"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/iv_shortcut"/>
        <Button
            android:id="@+id/btn_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_resume"
            android:textSize="12sp"
            android:textColor="@color/colorPrimary"
            android:layout_below="@id/iv_shortcut"
            android:layout_toRightOf="@id/btn_suspend"/>

    </RelativeLayout>
    <GridView
        android:id="@+id/gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:numColumns="4"
        android:layout_below="@id/et_content"
        android:layout_marginTop="10dp"/>

</RelativeLayout>
